source initial added

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,3 +1,6 @@
+@use "../helpers/variables" as v;
+@use "../helpers/mixins" as mixin;
+
 //===========================================
 // -Footer start
 //===========================================
@@ -5,3 +8,4 @@
 //===========================================
 // -Footer end
 //===========================================
+
