--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -1,3 +1,6 @@
+@use "../helpers/variables" as v;
+@use "../helpers/mixins" as mixin;
+
 //===========================================
 // -Navbar start
 //===========================================
