--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -5,18 +5,38 @@
 // Colors start
 
 // define your vars or override bootstrap vars
-$default: #d8d7d7;
-$primary: #1bbed0b6;
-$secondary: #004cff;
+$default: #ffffff;
+$primary: #20B15A;
+$secondary: #2757c8;
+$black-color: #000000;
+$orange-color: #F55F1D;
+$white-color: #ffffff;
+$background-color-green: #d7f5dc;
+
+//SIZES
+$navbar-height: 90px;
 
 // Typography Family
-$font-default: "Roboto", sans-serif;
+$font-default: "Poppins", sans-serif;
 $font-montserrat: "Montserrat", sans-serif;
 
 $font-path: "../fonts";
 
+//MAP breakpoint
+$breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+);
 
 
 // ===========================================
 // -Variables end
 // ===========================================
+
+
+
+
