--- a/assets/scss/partials/_classes.scss
+++ b/assets/scss/partials/_classes.scss
@@ -1,4 +1,22 @@
+@use "../helpers/variables" as v;
+@use "../helpers/mixins" as mixin;
+
 .container {
     margin: 0 auto;
-    padding: 16px 32px;
+    padding: 0px 100px;
+    max-width: 1440px;
 }
+
+@media (max-width: xl) {
+    .container {
+        padding: 0px 70px;
+    }
+}
+
+@include mixin.media-break(lg) {
+    .container {
+        padding: 0px 50px;
+    }
+}
+
+
