--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6,6 +6,7 @@
 @forward "partials/reset";
 @forward "partials/classes";
 @forward "partials/buttons";
+@forward "partials/cards";
 @forward "partials/forms";
 
 //===========================================
