--- a/assets/scss/partials/_buttons.scss
+++ b/assets/scss/partials/_buttons.scss
@@ -1,9 +1,32 @@
+@use "../helpers/variables" as v;
+@use "../helpers/mixins" as mixin;
 //===========================================
 // -Buttons start
 //===========================================
 
+.btn {
+    display: inline-block;
+    border-radius: 10px;
+    padding: 10px 25px;
+    @include mixin.text-style(16px, 24px, 500, v.$black-color);
+}
+
+.btn--primary {
+    background-color: v.$primary;
+    border: 1px v.$primary solid;
+    color: v.$white-color !important;
+
+    &:hover, &:focus, &:active {
+        
+    }
+}
+.btn--outline-primary {
+    border: 1px v.$primary solid;
+    &:hover, &:focus, &:active {
+       
+    }
+}
 
 //===========================================
 // -Buttons end
 //===========================================
-   
